--- a/app/views/manage-notifications-2.html
+++ b/app/views/manage-notifications-2.html
@@ -28,14 +28,14 @@
     ]
     %}
     {{ macros.radioGroup('ab-notifications', fields) }}
-    <h2 class="govuk-heading-l govuk-!-margin-top-4">
+    <h2 class="govuk-heading-m govuk-!-margin-top-4">
       Who should the notifications be sent to?
     </h2>
     <label class="govuk-label" for="event-name">
     Email address
     </label>
     <input class="govuk-input govuk-input govuk-input--width-20" id="system-notify-email-2" name="system-notify-email-2" value="{{ data['system-notify-email-2'] }}" type="text">
-    <h2 class="govuk-heading-l govuk-!-margin-top-6">
+    <h2 class="govuk-heading-m govuk-!-margin-top-6">
       How often should the notifications be sent? 
     </h2>
     <div class="govuk-radios govuk-!-margin-top-6 govuk-!-margin-bottom-8">
