--- a/app/views/notifications-enabled.html
+++ b/app/views/notifications-enabled.html
@@ -9,7 +9,7 @@
       <h1 class="govuk-heading-xl">
         {{ title }}
       </h1>
-      <h2 class="govuk-heading-l">
+      <h2 class="govuk-heading-m">
         Changes to courses as an accredited body
       </h2>
       <p>You'll receive notifications for courses that you're the accredited body for.</p> 
@@ -51,7 +51,7 @@
       </table>
       <a href="/manage-notifications-2" class="govuk-body">Add another recipient</a>
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-      <h2 class="govuk-heading-l">
+      <h2 class="govuk-heading-m">
         System notifications
       </h2>
       <p>You'll receieve notifications related to your account and the Publish teacher training courses service.</p>
