--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -10,7 +10,7 @@
 			<h1 class="govuk-heading-xl">
 				{{ title }}
 			</h1>
-			<h2 class="govuk-heading-l">
+			<h2 class="govuk-heading-m">
 				Changes to courses as an accredited body
 			</h2>
 			<p>You'll receive notifications for courses that you're the accredited body for.</p> 
@@ -49,7 +49,7 @@
 				</tbody>
 			</table> #}
 			<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-			<h2 class="govuk-heading-l">
+			<h2 class="govuk-heading-m">
 				System notifications
 			</h2>
 			<p>You'll receive notifications related to your account and the Publish teacher training courses service.</p>
