--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -29,7 +29,7 @@
 				<thead class="govuk-table__head">
 					<tr class="govuk-table__row">
 						<th class="govuk-table__header subject-col" style="width: 60%">Email</th>
-						<th class="govuk-table__header status-col" style="width: 25%">Freqency</th>
+						<th class="govuk-table__header status-col" style="width: 25%">Frequency</th>
 						<th class="govuk-table__header status-col"></th>
 					</tr>
 				</thead>
@@ -58,7 +58,7 @@
 				<thead class="govuk-table__head">
 					<tr class="govuk-table__row">
 						<th class="govuk-table__header subject-col" style="width: 60%">Email</th>
-						<th class="govuk-table__header status-col" style="width: 25%">Freqency</th>
+						<th class="govuk-table__header status-col" style="width: 25%">Frequency</th>
 						<th class="govuk-table__header status-col"></th>
 					</tr>
 				</thead>
