--- a/app/views/notifications-enabled.html
+++ b/app/views/notifications-enabled.html
@@ -27,7 +27,7 @@
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th class="govuk-table__header subject-col" style="width: 55%">Who are the notifications sent to?</th>
-            <th class="govuk-table__header status-col" style="width: 25%">Freqency</th>
+            <th class="govuk-table__header status-col" style="width: 25%">Frequency</th>
             <th class="govuk-table__header status-col"></th>
             {# <th class="govuk-table__header status-col"></th> #}
           </tr>
@@ -61,7 +61,7 @@
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th class="govuk-table__header subject-col" style="width: 60%">Email</th>
-            <th class="govuk-table__header status-col" style="width: 25%">Freqency</th>
+            <th class="govuk-table__header status-col" style="width: 25%">Frequency</th>
             <th class="govuk-table__header status-col"></th>
           </tr>
         </thead>
