--- a/app/views/manage-notifications-2.html
+++ b/app/views/manage-notifications-2.html
@@ -27,7 +27,7 @@
       }
     ]
     %}
-    {{ macros.radioGroup('ab-notifications', fields) }}
+    {{ macros.radioGroup('ab-notifications-2', fields) }}
     <h2 class="govuk-heading-m govuk-!-margin-top-4">
       Who should the notifications be sent to?
     </h2>
