--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -1,7 +1,12 @@
 {% extends "layout.html" %}
 {% set title = 'Notifications' %}
 {% block pageTitle %}{{ title }}{% endblock %}
-{% block backLink %}{{ macros.backLink(paths.back) }}{% endblock %}
+{% block beforeContent %}
+{{ govukBackLink({
+  text: "University of Warwick",
+  href: "/"
+}) }}
+{% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
