--- a/app/views/notifications-enabled.html
+++ b/app/views/notifications-enabled.html
@@ -13,6 +13,11 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <div class="body-text">
+      <div class="dm-alert dm-alert--success">
+        <h2 class="dm-alert__title">
+          {{ data['system-notify-email'] }} will now recieve notifications.
+        </h2>
+      </div>
       <h1 class="govuk-heading-xl">
         {{ title }}
       </h1>
