--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -16,6 +16,7 @@
 {% endblock %}
 
 {% block content %}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
@@ -32,8 +33,32 @@
     </div>
   </div>
 
+  {# <div class="app-banner app-banner--information app-banner--temporary-message">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <h2 class="app-banner__heading">
+          New features for accredited bodies
+        </h2>
+        <p class="app-banner__message govuk-body">
+          <p>You can now <a href="#">receive notifications</a> and <a href="#">see more information</a> about training providers and courses you accredit.</li>
+        </p>
+      </div>
+    </div>
+  </div> #}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      
+      {# <div class="app-banner app-banner--information app-banner--temporary-message">
+        <h2 class="app-banner__heading">
+          New features for accredited bodies
+        </h2>
+        <ul class="govuk-list govuk-list--bullet app-banner__message">
+          <li>You can <a href="#">receive notifications</a> about changes courses that you're the accredited body for</li>
+          <li>You can <a href="#">see information about courses and training providers</a> you're the accredited body for</li>
+        </ul>
+      </div> #}
+
       {% if data['rolled-over'] %}
         {% if data['next-cycle'] %}
           <p class="govuk-body-l">Prepare your courses and locations for the next cycle. All your courses, locations and details have been copied from the current cycle.</p>
@@ -106,14 +131,13 @@
       {% if not data['rolled-over'] %}
       <div class="status-box">
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-          <a href="/notifications">Notifications</a>
-        </h2>
-        <p>Manage your notification settings.</p>
-        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/request-access">Request access</a>
         </h2>
         <p>Request a DfE Sign-in account for others who manage your courses.</p>
-
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+          <a href="/notifications">Notifications</a>
+        </h2>
+        <p>Manage your notification settings.</p>
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/ucas/apply-preferences">UCAS contacts</a>
         </h2>
