add link and tidy up formatting

--- a/app/views/new-features-for-accredited-bodies.html
+++ b/app/views/new-features-for-accredited-bodies.html
@@ -16,11 +16,8 @@
 				Notifications
 			</h2>
 			<p>Receive email notifications about changes to courses that you're the accredited body for.</p> 
-			
 			<a href="/notifications" class="govuk-body">Subscribe to notifications</a>
-			
 			<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-			
 			<h2 class="govuk-heading-m">
 				Courses as an accredited body
 			</h2>
@@ -29,13 +26,13 @@
 				<li>see who lists you as their accredited body</li>
 				<li>see which courses you’re the accredited body for</li>
 			</ul>
-			<a href="#" class="govuk-body">View courses as an accredited body</a>
+			<a href="/accredited-body" class="govuk-body">View courses as an accredited body</a>
 		</div>
 	</div>
 </div>
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
-			<a href="/" role="button" draggable="false" class="govuk-button govuk-!-margin-top-8">Continue to Publish</a>
+		<a href="/" role="button" draggable="false" class="govuk-button govuk-!-margin-top-8">Continue to Publish</a>
 	</div>
 </div>
 {% endblock %}
