--- a/app/views/new-features-for-accredited-bodies.html
+++ b/app/views/new-features-for-accredited-bodies.html
@@ -32,7 +32,7 @@
 </div>
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
-		<a href="/" role="button" draggable="false" class="govuk-button govuk-!-margin-top-8">Continue to Publish</a>
+		<a href="/" role="button" draggable="false" class="govuk-button govuk-!-margin-top-8">Continue</a>
 	</div>
 </div>
 {% endblock %}
