--- a/app/views/new-features-for-accredited-bodies.html
+++ b/app/views/new-features-for-accredited-bodies.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% set title = 'New features for accredited bodies' %}
+{% set title = 'New features' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block beforeContent %}
 {% endblock %}
@@ -11,22 +11,22 @@
 			<h1 class="govuk-heading-xl">
 				{{ title }}
 			</h1>
-			<p>We have recently introduced two new features to further support you.</p>
-			<h2 class="govuk-heading-m">
-				Notifications
-			</h2>
-			<p>Receive email notifications about changes to courses that you're the accredited body for.</p> 
-			<a href="/notifications" class="govuk-body">Subscribe to notifications</a>
-			<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+			<p>We’ve recently added two new features to further support accredited bodies.</p>
 			<h2 class="govuk-heading-m">
 				Courses as an accredited body
 			</h2>
-			<p>Use this section to:</p>
+			<p>In this section, you can see:</p>
 			<ul class="govuk-list govuk-list--bullet">
-				<li>see who lists you as their accredited body</li>
-				<li>see which courses you’re the accredited body for</li>
+				<li>who lists you as their accredited body</li>
+				<li>which courses you’re the accredited body for</li>
 			</ul>
-			<a href="/accredited-body" class="govuk-body">View courses as an accredited body</a>
+			<a href="/accredited-body" class="govuk-body">View this feature</a>
+			<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+			<h2 class="govuk-heading-m">
+				Notifications
+			</h2>
+			<p>Receive notifications about courses that you’re the accredited body for. You’ll be told about any new courses added and updated about changes to existing courses.</p> 
+			<a href="/notifications" class="govuk-body">Subscribe to notifications</a>
 		</div>
 	</div>
 </div>
