update side bar copy

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -137,7 +137,7 @@
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/notifications">Notifications</a>
         </h2>
-        <p>Manage your notification settings.</p>
+        <p>Recieve notifications about courses that you’re the accredited body for.</p>
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/ucas/apply-preferences">UCAS contacts</a>
         </h2>
