--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -33,18 +33,18 @@
     </div>
   </div>
 
-  {# <div class="app-banner app-banner--information app-banner--temporary-message">
+  <div class="app-banner app-banner--information app-banner--temporary-message">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <h2 class="app-banner__heading">
-          New features for accredited bodies
+          New features
         </h2>
         <p class="app-banner__message govuk-body">
-          <p>You can now <a href="#">receive notifications</a> and <a href="#">see more information</a> about training providers and courses you accredit.</li>
+          <p>You can now <a href="#">receive notifications</a> and <a href="#">see more information</a> about the courses and training providers you accredit.</li>
         </p>
       </div>
     </div>
-  </div> #}
+  </div>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
