--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -39,9 +39,10 @@
         <h2 class="app-banner__heading">
           New features
         </h2>
-        <p class="app-banner__message govuk-body">
-          <p>You can now <a href="#">receive notifications</a> and <a href="#">see more information</a> about the courses and training providers you accredit.</li>
-        </p>
+        <ul class="govuk-list govuk-list--bullet app-banner__message">
+          <li><a href="#">See information about courses and training providers</a> you're the accredited body for</li>
+          <li><a href="#">Receive notifications</a> about changes courses that you're the accredited body for.</li>
+        </ul>
       </div>
     </div>
   </div>
