--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -39,6 +39,7 @@
         <h2 class="app-banner__heading">
           New features
         </h2>
+        <p class="govuk-body">We’ve recently added two new features to further support accredited bodies.</p> 
         <ul class="govuk-list govuk-list--bullet app-banner__message">
           <li><a href="#">See information about courses and training providers</a> you're the accredited body for</li>
           <li><a href="#">Receive notifications</a> about changes courses that you're the accredited body for.</li>
