--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -39,10 +39,10 @@
         <h2 class="app-banner__heading">
           New features
         </h2>
-        <p class="govuk-body">We’ve recently added two new features to further support accredited bodies.</p> 
+        <p class="govuk-body">We’ve added two features to further support accredited bodies.</p> 
         <ul class="govuk-list govuk-list--bullet app-banner__message">
-          <li><a href="#">See information about courses and training providers</a> you're the accredited body for</li>
-          <li><a href="#">Receive notifications</a> about changes courses that you're the accredited body for.</li>
+          <li><a href="/accredited-body">See which courses</a> you're the accredited body for</li>
+          <li><a href="/notifications">Get notifications</a> about changes to these courses</li>
         </ul>
       </div>
     </div>
@@ -133,13 +133,13 @@
       {% if not data['rolled-over'] %}
       <div class="status-box">
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-          <a href="/request-access">Request access</a>
-        </h2>
-        <p>Request a DfE Sign-in account for others who manage your courses.</p>
-        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/notifications">Notifications</a>
         </h2>
         <p>Recieve notifications about courses that you’re the accredited body for.</p>
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+          <a href="/request-access">Request access</a>
+        </h2>
+        <p>Request a DfE Sign-in account for others who manage your courses.</p>
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/ucas/apply-preferences">UCAS contacts</a>
         </h2>
