hide the checkbox

--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -30,8 +30,8 @@
         %}
         {{ macros.radioGroup('ab-notifications', fields) }}
       
-        {{ macros.checkboxGroup('agree-to-share', [{ name: 'I give permission to receive emails from Publish teacher training courses' }], false) }}
-      <input type="submit" class="govuk-button govuk-!-margin-bottom-8" value="Save">
+        {# {{ macros.checkboxGroup('agree-to-share', [{ name: 'I give permission to receive emails from Publish teacher training courses' }], false) }} #}
+      <input type="submit" class="govuk-button govuk-!-margin-bottom-8 govuk-!-margin-top-2" value="Save">
     </form>
     <p>
       <a href="#">Cancel changes</a>
