--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -34,7 +34,7 @@
       <input type="submit" class="govuk-button govuk-!-margin-bottom-8 govuk-!-margin-top-2" value="Save">
     </form>
     <p>
-      <a href="#">Cancel changes</a>
+      <a href="/">Cancel changes</a>
     </p>
   </div>
 </div>
