random data set update

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div class="app-banner app-banner--information app-banner--temporary-message">
+  {# <div class="app-banner app-banner--information app-banner--temporary-message">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         <h2 class="app-banner__heading">
@@ -46,7 +46,7 @@
         </ul>
       </div>
     </div>
-  </div>
+  </div> #}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
