Assets added for the new header and draft users pages

--- a/app/views/layout-new.html
+++ b/app/views/layout-new.html
@@ -51,7 +51,7 @@
         text: "Notifications"
       },
       {
-        href: "/manage-users",
+        href: "/users/users",
         text: "Users"
       },
       {
