--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -127,9 +127,9 @@
         </h2>
         <p>Recieve notifications about courses that you’re the accredited body for.</p>
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-          <a href="/manage-users">Users</a>
+          <a href="/users/users">Users</a>
         </h2>
-        <p>See who has access to this account and request access for others.</p>
+        <p>See who has access to this account and invite others.</p>
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/ucas/apply-preferences">UCAS contacts</a>
         </h2>
