--- a/app/views/users/users.html
+++ b/app/views/users/users.html
@@ -20,7 +20,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p>These users are able to manage your courses and details of your organisation.</p>
+      <p>These users are will be able to manage your courses and details of the organisation.</p>
       <h1 class="govuk-heading-xl">{{title}}</h1>
       {{govukButton({
         text: 'Invite user',
