--- a/app/views/users/users-alert.html
+++ b/app/views/users/users-alert.html
@@ -15,11 +15,11 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p>These users are able to manage your courses and details of your organisation.</p>
+      <p>These users are able to manage your courses and details of the organisation.</p>
       <h1 class="govuk-heading-xl">{{title}}</h1>
       {{govukButton({
         text: 'Invite user',
-        href: '/invite-user'
+        href: '/users/invite-user'
       })}}
       <div class="app-application-card">
         <div class="full">
