--- a/app/views/users/invite-user.html
+++ b/app/views/users/invite-user.html
@@ -9,7 +9,7 @@
         <h3 class="govuk-heading-m govuk-!-margin-bottom-0 success-summary-heading" id="success-summary-heading-example-1">
           DfE has received your request to give access to {{ data['request-first-name']}} {{ data['request-last-name'] }}.
         </h3>
-        <p>
+        <p class="govuk-!-margin-bottom-0">
           They will receive sign-up instructions if their account is approved.
         </p>
       </div>
