--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -129,7 +129,7 @@
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/users/users">Users</a>
         </h2>
-        <p>See who has access to this account and invite others.</p>
+        <p>See who has access to this account and invite new users.</p>
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/ucas/apply-preferences">UCAS contacts</a>
         </h2>
