--- a/app/views/users/invite-user.html
+++ b/app/views/users/invite-user.html
@@ -20,7 +20,7 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p>You can invite a user to this account. They will be able to manage your courses and details of the organisation.</p>
+      <p>Invite a new user to have access to this account. This could include training partners or people within your own organisation.</p>
 
       <form action="/users/invite-user" method="post">
         <legend>
