--- a/app/views/users/users-alert.html
+++ b/app/views/users/users-alert.html
@@ -5,17 +5,17 @@
 {% block content %}
   <div class="success-summary" role="alert" aria-labelledby="success-summary-heading-example-1" tabindex="-1" style="margin-bottom: 60px">
     <h3 class="govuk-heading-m govuk-!-margin-bottom-0 success-summary-heading" id="success-summary-heading-example-1">
-      DfE has received your request to invite Firstname Lastname.
+      We have received your request.
     </h3>
     <p class="govuk-!-margin-bottom-0">
-      They will receive sign-up instructions if their account is approved.
+      If the request is approved, the new user will receive sign up instructions by email. This should happen within 2 working days. If the request is not approved, we’ll contact you by email with further information.
     </p>
   </div>
 
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <p>These users are able to manage your courses and details of the organisation.</p>
+      <p>These users currently have access to this account. They can manage all your course and organisation details, including publishing, closing and withdrawing courses.</p>
       <h1 class="govuk-heading-xl">{{title}}</h1>
       {{govukButton({
         text: 'Invite user',
