--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% set title = 'Manage: Updates to courses as an accredited body' %}
+{% set navActive = 'notifications' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block breadcrumbs %}{{ macros.breadcrumbs(breadcrumbItems())}}{% endblock %}
 
