--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -20,7 +20,6 @@ $button-colour: #00823b;
 @import "components/map";
 @import "components/notification-banner";
 @import "components/application-card";
-@import "components/new-header";
 
 blockquote {
   margin: 0;
@@ -430,6 +429,12 @@ dl.aligned.course-part-tasks dd {
   .govuk-header__logo {
     width: auto;
   }
+
+  .govuk-header__logotype-text {
+    font-size: 1.5rem;
+    line-height: 1.25;
+    font-weight: 700;
+  }
   
   .govuk-header__content {
     @include govuk-media-query(desktop) {
@@ -443,15 +448,6 @@ dl.aligned.course-part-tasks dd {
     display: inline-block;
     margin-right: govuk-spacing(4);
     
-    &:nth-child(2) {
-      
-      a {
-        font-weight: 700;
-        border: none;
-        text-decoration: none;
-      }
-    }
-    
     &:last-child {
       margin-right: 0;
     }
@@ -460,7 +456,23 @@ dl.aligned.course-part-tasks dd {
       @include govuk-font(19);
       text-decoration: underline;
     }
+    
+    a:hover {
+      text-decoration: none;
+    }
   
+  }
+
+  .govuk-header__navigation-item--active {
+    a {
+      font-weight: 700;
+      border: none;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: none;
+    }
   }
   
   .govuk-header__link {
@@ -472,20 +484,10 @@ dl.aligned.course-part-tasks dd {
       color: inherit;
     }
   
-    &:not(.govuk-header__link--homepage):hover {
-      text-decoration: underline;
-    }
-  
     &:focus {
       color: govuk-colour("black");
     }
   
-  }
-  
-  .govuk-header__navigation-link[aria-current=page] {
-    text-decoration: none;
-    font-weight: bold;
-    display: none;
   }
 
   .govuk-header__logotype-text {
