--- a/app/views/layout-new.html
+++ b/app/views/layout-new.html
@@ -40,27 +40,29 @@
   {% set serviceUrl %}{% if value('rolled-over') %}/cycles{% else %}/{% endif %}{% endset %}
 
   {{
-  govukHeader({
-    productName: 'Publish teacher training courses',
-    'serviceName': productName,
-    'homepageUrl': '/',
-    'classes': 'govuk-header__new',
-    navigation: [
-      {
-        href: "/notifications",
-        text: "Notifications"
-      },
-      {
-        href: "/users/users",
-        text: "Users"
-      },
-      {
-        href: "#",
-        text: "Sign out (Jane Doe)"
-      }
-    ]
-  })
-}}
+    govukHeader({
+      productName: 'Publish teacher training courses',
+      'serviceName': productName,
+      'homepageUrl': '/',
+      'classes': 'govuk-header__new',
+      navigation: [
+        {
+          href: "/notifications",
+          text: "Notifications",
+          active: true if (navActive == 'notifications'),
+        },
+        {
+          href: "/users",
+          text: "Users",
+          active: true if (navActive == 'users'),
+        },
+        {
+          href: "#",
+          text: "Sign out (Jane Doe)",
+        }
+      ]
+    })
+  }}
 {% endblock %}
 
 {% block beforeContent %}
